# SourCandy

./: .gitignore  IMPLEMENTATION_SUMMARY.py  LICENSE  README.md  __init__.py  guard.py  interfaces.py  package_test.ipynb  pyproject.toml  schema.py
core/: __init__.py  embedding.py  sournessIndex.py  visualizer.py
correctors/: __init__.py  fixes.py
knowledge/: __init__.py  graph.py  store.py
optimizers/: __init__.py  promptRefiner.py
verifiers/: __init__.py  domainVerifiers.py
