[project]
name = "sourcandy"
version = "0.1.0"
description = "No one likes sourness in candy right? SourCandy is a framework for hallucination mitigation in LLMs. Verify, correct, and re-verify."
authors = [
    { name = "Soumya Sourav Das", email = "soumyasourav0311@gmail.com" },
    { name = "Devyanshi Bansal", email = "devyanshib8@gmail.com" },
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
# Core dependencies
dependencies = [
    "pydantic>=2.0",
    "numpy>=1.24.0",
]

[project.urls]
Homepage = "https://github.com/celestial317/sourcandy"
"Bug Tracker" = "https://github.com/celestial317/sourcandy/issues"

[project.optional-dependencies]
# Dependencies for visualization
viz = [
    "matplotlib>=3.6.0",
    "seaborn>=0.12.0",
]
# Dependencies for specific verifiers and tools
tools = [
    "wikipedia",
    "duckduckgo-search",
    "langchain",
    "langchain-community",
    "langchain-google-genai",
]
dev = [
    "pytest",
    "ruff",
]
# All optional dependencies
all = [
    "matplotlib>=3.6.0",
    "seaborn>=0.12.0",
    "wikipedia",
    "duckduckgo-search",
    "langchain",
    "langchain-community",
    "langchain-google-genai",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"